Dropped dependencies keyword from GitLab CI
In GitLab 12.6 and later, you can’t combine the dependencies
keyword with needs to control artifact downloads in jobs.
Ref.: https://docs.gitlab.com/ce/ci/yaml/README.html#artifact-downloads-with-needs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,9 +113,8 @@ test-linux-debian-buster:
   cache: {}
   <<: *matrix-gcc7-clang7
   needs:
-    - build-linux-debian-buster
-  dependencies:
-    - build-linux-debian-buster
+    - job: build-linux-debian-buster
+      artifacts: true
 
 .matrix-gcc10-clang10: &matrix-gcc10-clang10
   parallel:
@@ -154,6 +153,5 @@ test-linux-debian-bullseye:
   cache: {}
   <<: *matrix-gcc10-clang10
   needs:
-    - build-linux-debian-bullseye
-  dependencies:
-    - build-linux-debian-bullseye
+    - job: build-linux-debian-bullseye
+      artifacts: true
