Use a separate build dir for each build matrix config in GitLab CI
Subsequent pipeline steps download all artifacts. Hence we must separate
artifacts from different build matrix jobs in order to prevent files
being overridden when extracting artifacts e.g. in the test stage.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   # The cache and install prefix paths must be relative to and reside inside the project directory ($CI_PROJECT_DIR),
   # because cache:paths and artifacts:paths do not support absolute paths or linking outside the project directory.
   # Ref.: https://docs.gitlab.com/ce/ci/yaml/README.html
+  BUILD_DIR: '$CI_PROJECT_DIR/build/${CC}-${CXX}-${BUILD_TYPE}'
   CCACHE_DIR: '$CI_PROJECT_DIR/.cache/ccache/${CC}-${CXX}-${BUILD_TYPE}'
   INSTALL_PREFIX: '$CI_PROJECT_DIR/.local/${CC}-${CXX}-${BUILD_TYPE}'
   # PATH variable cannot be set here
@@ -70,8 +71,8 @@ default:
     - export PATH=/usr/lib/ccache:$PATH
     - ccache -s
     - cd "$CI_PROJECT_DIR"
-    - if [ ! -e build ]; then mkdir build; fi
-    - cd build/
+    - if [ ! -e "$BUILD_DIR" ]; then mkdir -p "$BUILD_DIR"; fi
+    - cd "$BUILD_DIR"
     - >
       cmake \
         "-DCMAKE_BUILD_TYPE=${BUILD_TYPE}" \
@@ -81,14 +82,14 @@ default:
         -DHBRS_MPL_ENABLE_ELEMENTAL=ON \
         -DHBRS_MPL_ENABLE_MATLAB=OFF \
         $CMAKE_VISIBILITY_OPTIONS \
-        .. || { cat CMakeFiles/CMakeError.log; exit 255; };
+        "$CI_PROJECT_DIR" || { cat CMakeFiles/CMakeError.log; exit 255; };
     - make "-j$(nproc)"
     - ccache -s
     - make install
 
 .test-linux: &test-linux
   script:
-    - cd "$CI_PROJECT_DIR/build"
+    - cd "$BUILD_DIR"
     - for i in $(seq 5); do ctest --output-on-failure || exit 255; done
 
 .matrix-gcc7-clang7: &matrix-gcc7-clang7
